<resources>
    <string name="app_name">Store Log Flog</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="terms_of_service_privacy_policy"><![CDATA[Terms of service & ]]></string>
    <string name="have_an_account">Have an Account?</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_edit_photo">Edit Photo</string>
    <string name="action_edit_item">Edit Item</string>
    <string name="action_delete_item">Delete Item</string>
    <string name="action_done">Done</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="facebook_app_id">3628091277254455</string>
    <string name="fb_login_protocol_scheme">fb3628091277254455</string>


    <string name="text_dummy">If you are an existing or new tenant at a storage facility/yard then press the button below.</string>
    <string name="text_dummy12">If you are looking for a local self storage facility. press the button below.</string>
    <string name="text_dummy13">If you want to create your own personal storage space i.e the garage press the button below.</string>


    <string name="text_dummy5">There are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable There are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable.


        \n\nThere are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable There are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable.
    </string>

    <string name="text_dummy6">There are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable.

        <!--
        \n\nThere are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable.-->
    </string>

    <string name="top_text_add_storage"> Please give detail information about your storage space, to serve you better.</string>

    <string name="text_dummy2">There are many variations of passages of Lorem available,
        but the majority have suffered.
    </string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the Terms & Conditions]]></string>


    <array name="unit">
        <item>Number of units you looking for</item>
    </array>

    <string-array name="SelectUnit">
        <item>Select Unit</item>
        <item>Centimeter</item>
        <item>Inch</item>
    </string-array>

    <string-array name="Select_Currency">
        <item>£</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <!--contact us-->
    <string name="storage_yard_details">Please provide the details of your existing storage facility below:</string>

    <string name="text_dummy3">There are many variations of passages of Lorem available,
        but the majority have suffered attention in some form,by injected humour randomised words which dont
        look even slightly believable.
    </string>
    <string name="i_agree_to_auction_valution_terms_condition"><![CDATA[I agree to the Terms & Condition]]></string>
    <string name="menu_store">Store</string>
    <string name="menu_log">Log</string>
    <string name="menu_flog">Flog</string>
    <string name="menu_buy_storage">Buy Storage</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_tutorial">Tutorials</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_logout">Logout</string>
    <string name="text_dummy4">There are many variations of passages of Lorem available</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="back_to_login"><![CDATA[< Back to login]]></string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="subscription">Subscription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Storage Selection-->

    <string name="garage">GARAGE</string>
    <string name="shed">SHED</string>
    <string name="loft">LOFT</string>
    <string name="other">OTHER</string>
    <string name="next">NEXT</string>
    <string name="storage_type">1. Select your personal storage type</string>
    <string name="storage_shap">2. Select the shape of your storage</string>
    <string name="storage_shap2">Build your grid from the top left corner</string>
    <string name="Reset">RESET</string>
    <string name="DoorSelection">Door Selection</string>
    <string name="select_door">3.Select which type of door you have.</string>
    <string name="select_door2">Please select the position of your door(s) from the wall above.</string>
    <string name="single_door">SINGLE DOOR</string>
    <string name="double_door">DOUBLE DOOR</string>
    <string name="single_garage">SINGLE GARAGE</string>
    <string name="double_garage">DOUBLE GARAGE</string>
    <string name="confirmation">Confirmation</string>
    <string name="your_storage">4.Here is your storage</string>
    <string name="personal_storage">You are now ready to start logging item in your personal storage place</string>
    <string name="press_proceed">Press proceed to add your first item</string>
    <string name="Proceed">Proceed</string>
    <string name="AddStorage">Add Storage</string>
    <string name="detail_information">Please add your storage space name, email and country of residence.</string>
    <string name="detail_information2">Please update your storage space name, email and country of residence.</string>

    <string name="staorage_spcae_name">Storage Space Name, i.e Home,Loft,Garage* (26 char.)</string>
    <string name="short_desxription">Short Description (32 char.)</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="select_resign">Select Region</string>
    <string name="select_country">Select Country*</string>
    <string name="select_category">Select Category</string>
    <string name="select_category2">Select Category*</string>
    <string name="enter_city">Enter City*</string>
    <string name="postcode">Post Code</string>
    <string name="agree_term_condition">I agree to the Terms &amp; Conditions</string>
    <string name="value">Value (£)</string>
    <string name="category">Category</string>
    <string name="Size">Size (CM) (LxWxT)</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="created_store_flog">Created by StoreLogFlog</string>
    <string name="item_category">Item Category</string>
    <string name="select_shelf">Select Shelves</string>
    <string name="select_shelf_location">Please select shelves location</string>
    <string name="select_Shelves">Please select how many shelves</string>
    <string name="Shelves_not_available">The amount of shelves selected is not available. Please select again.</string>

    <string name="Take_Photo">Take Photo</string>
    <string name="Choose_from_Library">Gallery</string>
    <string name="Camera_permission">Camera access required</string>
    <string name="Camera_permission_txt">Please give StoreLogFlog access to this  device\'s camera to click your pictures </string>
    <string name="Cancel">Cancel</string>
    <string name="OK">Ok</string>
    <string name="delete_rack">If you want to amend the number of shelves you need to clear and start again</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_image">Please add an Image(s) from your gallery or camera, pressing the Icon below</string>
    <string name="search_cards">Search Cards</string>
    <string name="continued">Continue</string>
    <string name="subscription_expiered">Your subscription for the storage space is expiered. Please continue to renew the subscription.</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_video">VideoActivity</string>


</resources>
