<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_photo"
        android:orderInCategory="100"
        android:title="@string/action_edit_photo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_item"
        android:orderInCategory="100"
        android:title="@string/action_edit_item"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_delete_item"
        android:orderInCategory="100"
        android:title="@string/action_delete_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:title="@string/action_done"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="Search"
        android:iconTint="@color/colorWhite"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>






</menu>