<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground"
    android:orientation="vertical"
    tools:context=".StorageSelection.activity.AddStorageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/toolbar_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/icon_back" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_toolbar_title"
            style="@style/textview_style_heading"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/toolbar_back"
            android:text="@string/AddStorage"
            android:visibility="visible" />




    </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_20sdp">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_information"
                        style="@style/textview_style_medium"
                        android:layout_width="wrap_content"
                        android:text="@string/detail_information"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/colorWhite"/>


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/staorage_spcae_name_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/staorage_spcae_name"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:maxLength="26"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName"
                        android:background="@drawable/background_edit_square"/>



                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/short_desxription_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/short_desxription"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName"
                        android:maxLength="32"
                        android:background="@drawable/background_edit_square"/>


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/address1_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/address1"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName"
                        android:visibility="gone"
                        android:background="@drawable/background_edit_square"/>



                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/address2_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/address2"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName"
                        android:visibility="gone"
                        android:background="@drawable/background_edit_square"/>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_country"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:hint="@string/select_country"
                        android:padding="5dp"
                        android:gravity="center|left"
                        app:drawableTint="@color/colorWhite"
                        android:textColorHint="#A1A2A6"
                        android:fontFamily="@font/roboto"
                        android:textSize="12sp"

                        android:textColor="@color/colorWhite"
                        android:drawablePadding="10dp"
                        android:background="@drawable/background_edit_square"/>


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/enter_city_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/enter_city"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName"
                        android:background="@drawable/background_edit_square"/>


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/postcode_ext"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/postcode"
                        android:padding="7dp"
                        android:textColorHint="#A1A2A6"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/colorWhite"
                        android:inputType="phone"
                        android:visibility="gone"
                        android:background="@drawable/background_edit_square"/>

                    <TextView
                        android:id="@+id/price_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:visibility="gone"
                        />


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/term_check"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:buttonTint="@color/colorPrimary"/>

                        <RelativeLayout
                            android:id="@+id/policy_linear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/policy_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/_12ssp"
                                android:text="@string/agree_term_condition"/>


                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>





        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/submit_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/submit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/submit"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_forward"
            android:layout_toEndOf="@+id/submit_txt"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


</RelativeLayout>