<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/popup_rela">

        <TextView
            android:id="@+id/facebook_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#212121"
            android:textSize="18dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto" />


        <TextView
            android:id="@+id/allow_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/Camera_permission_txt"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"/>

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/allow_txt"
            android:layout_marginTop="15dp"
            android:background="#d3d3d3" />

        <TextView
            android:id="@+id/btn_OK"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/OK"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black" />


    </RelativeLayout>

</RelativeLayout>